--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ gtk = {version = "0.8.1", features = ["v3_22"]}
 pango = "0.8.0"
 pangocairo = "0.9.0"
 sourceview = "0.8.0"
+serde_derive = "1.0.104"
+ron = "0.5.1"
+serde = "1.0.104"
